--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>컨트롤에이, CONTROLA : 즐거운 상상력</title>
     <link rel="icon" href="x" type="image/x-icon">
     <script src="js/js.js"></script>
     <link rel="stylesheet" href="css/css.css">
