--- a/index.html
+++ b/index.html
@@ -23,12 +23,24 @@
     <!--------------------------------사이드 네비-------------------------------------->
     <div id="sideTxt">
         <ul>
-            <li>회사소개서</li>
-            <li>프리넥스트</li>
-            <li>리퀘스트</li>
-            <li>블로그</li>
-            <li>페이스북</li>
-            <li>트위터</li>
+            <li>
+                <a href="#">회사소개서</a>
+            </li>
+            <li>
+                <a href="#">프리넥스트</a>
+            </li>
+            <li>
+                <a href="#">리퀘스트</a>
+            </li>
+            <li>
+                <a href="#">블로그</a>
+            </li>
+            <li>
+                <a href="#">페이스북</a>
+            </li>
+            <li>
+                <a href="#">트위터</a>
+            </li>
         </ul>
     </div>
     <div id="sideBox">
@@ -58,6 +70,11 @@
             <img class="side" src="img/side_top_black.png" alt="">
         </a>
     </div>
+    <div id="top">
+        <a href="#">
+            <img src="img/icon_top.png" alt="" width="16.5px" height="30px">
+        </a>
+    </div>
     <!--------------------------------상단 네비-------------------------------------->
     <header>
         <nav id="topGnb">
@@ -75,14 +92,51 @@
             </ul>
             <span class="material-symbols-outlined" id="language">language</span>
             <span class="material-symbols-outlined" id="menu">menu</span>
-            <span class="material-symbols-outlined close">close</span>
         </nav>
     </header>
+    <!--------------------------------데스크탑 서브 메뉴-------------------------------------->
+    <nav id="subMenu">
+        <ul class="subList">
+                <li>
+                    <a href="">
+                        회사소개
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        주요 서비스
+                    </a>
+                </li>
+        </ul>
+    </nav>
+    <nav id="subMenu2">
+        <ul>
+            <p>시스템통합</p>
+            <li>-민간·서비스</li>
+            <li>-금융</li>
+            <li>-공공</li>
+            <li>-커머스</li>
+            <li>-헬스케어</li>
+            <li>-국방</li>
+        </ul>
+        <p>운영서비스</p>
+        <ul>
+            <p>플랫폼</p>
+            <li>-플러스넷</li>
+            <li>-PG·VAN 서비스</li>
+            <li>-창업서비스</li>
+        </ul>
+    </nav>
     <!--------------------------------모바일 메뉴-------------------------------------->
     <nav class="mobileGnb">
+        <div id="mobileTop">
+            <a href="#">
+                <img src="img/logo_color.png" alt="">
+            </a>
+            <span class="material-symbols-outlined close">close</span>
+        </div>
         <ul class="mobileMenu">
             <li>
-                <hr>
                 <a href="#">회사소개</a>
                 <span class="material-symbols-outlined moreBtn1">expand_more</span>
                 <span class="material-symbols-outlined lessBtn1">expand_less</span>
@@ -120,35 +174,6 @@
             <li><a href="#">포트폴리오</a></li>
             <li><a href="#">오시는 길</a></li>
             <li><a href="#">프로젝트 의뢰</a></li>
-        </ul>
-    </nav>
-    <!--------------------------------모바일 서브 메뉴-------------------------------------->
-    <nav id="subMenu">
-        <ul class="subList">
-            <a href="">
-                <li>회사소개</li>
-            </a>
-            <a href="">
-                <li>주요 서비스</li>
-            </a>
-        </ul>
-    </nav>
-    <nav id="subMenu2">
-        <ul>
-            <p>시스템통합</p>
-            <li>-민간·서비스</li>
-            <li>-금융</li>
-            <li>-공공</li>
-            <li>-커머스</li>
-            <li>-헬스케어</li>
-            <li>-국방</li>
-        </ul>
-        <p>운영서비스</p>
-        <ul>
-            <p>플랫폼</p>
-            <li>-플러스넷</li>
-            <li>-PG·VAN 서비스</li>
-            <li>-창업서비스</li>
         </ul>
     </nav>
     <!--------------------------------carousel-------------------------------------->
@@ -387,6 +412,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script>
     $(function (){
+        let header=$("header");
         let menuBtn=$("#menu");
         let topGnb=$("#topGnb");
         let mbMenu=$(".mobileGnb")
@@ -394,7 +420,7 @@
         let subList1=$(".subList")
         let navLi=$("#topGnb li a");
         let actcross=$("#actcross")
-        let nonecross=$("#nonecross")
+        let nonecross=$("#nonecross");
         let plusBox=$("#plusBox");
         let moreBtn1=$(".moreBtn1");
         let lessBtn1=$(".lessBtn1");
@@ -409,7 +435,8 @@
 
         navLi.eq(0).hover(function (){
             subList1.show();
-        },function (){
+        });
+        subList1.eq(0).mouseleave(function (){
             subList1.hide();
         });
         /********************모바일 메뉴 활성화 및 비활성화********************/
@@ -418,11 +445,10 @@
 
         menuBtn.click(function (){
             $("body").addClass("hidden");
-            topGnb.css("background-color","white")
+            topGnb.hide();
             mbMenu.show();
             menuBtn.hide();
             closeBtn.show();
-            topGnb.css("background-color","white");
         })
         closeBtn.click(function (){
             topGnb.css("background-color","")
@@ -430,7 +456,8 @@
             mbMenu.hide();
             closeBtn.hide();
             menuBtn.show();
-            topGnb.css("background-color","");
+            topGnb.show();
+            // topGnb.css("display","none");
         })
         /********************모바일 서브 메뉴1********************/
         lessBtn1.hide();
