--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>컨트롤에이, CONTROLA : 즐거운 상상력</title>
     <link rel="icon" href="x" type="image/x-icon">
-    <script src="js/js.js"></script>
     <link rel="stylesheet" href="css/css.css">
     <!-------------------------------구글 아이콘, 제이쿼리, 부트스트랩 cdn------------------------------->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -78,7 +77,7 @@
     <!--------------------------------상단 네비-------------------------------------->
     <header>
         <nav id="topGnb">
-            <a href="">
+            <a href="index.html">
                 <img src="img/logo2.png" width="166px" height="28px" alt="" id="noneHov">
                 <img src="img/logo_color.png" width="166px" height="28px" alt="" id="actHov">
             </a>
@@ -92,59 +91,59 @@
             </ul>
             <span class="material-symbols-outlined" id="language">language</span>
             <span class="material-symbols-outlined" id="menu">menu</span>
+            <nav id="subMenu">
+                <ul class="subList">
+                    <li>
+                        <a href="index2.html">
+                            회사소개
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            주요 서비스
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </nav>
+        <!--------------------------------데스크탑서브메뉴-------------------------------------->
+        <nav id="subMenu2">
+            <ul>
+                <p>시스템통합</p>
+                <li>-민간·서비스</li>
+                <li>-금융</li>
+                <li>-공공</li>
+                <li>-커머스</li>
+                <li>-헬스케어</li>
+                <li>-국방</li>
+            </ul>
+            <p>운영서비스</p>
+            <ul>
+                <p>플랫폼</p>
+                <li>-플러스넷</li>
+                <li>-PG·VAN 서비스</li>
+                <li>-창업서비스</li>
+            </ul>
         </nav>
     </header>
-    <!--------------------------------데스크탑 서브 메뉴-------------------------------------->
-    <nav id="subMenu">
-        <ul class="subList">
-                <li>
-                    <a href="">
-                        회사소개
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        주요 서비스
-                    </a>
-                </li>
-        </ul>
-    </nav>
-    <nav id="subMenu2">
-        <ul>
-            <p>시스템통합</p>
-            <li>-민간·서비스</li>
-            <li>-금융</li>
-            <li>-공공</li>
-            <li>-커머스</li>
-            <li>-헬스케어</li>
-            <li>-국방</li>
-        </ul>
-        <p>운영서비스</p>
-        <ul>
-            <p>플랫폼</p>
-            <li>-플러스넷</li>
-            <li>-PG·VAN 서비스</li>
-            <li>-창업서비스</li>
-        </ul>
-    </nav>
     <!--------------------------------모바일 메뉴-------------------------------------->
     <nav class="mobileGnb">
         <div id="mobileTop">
-            <a href="#">
+            <a href="index.html">
                 <img src="img/logo_color.png" alt="">
             </a>
             <span class="material-symbols-outlined close">close</span>
         </div>
         <ul class="mobileMenu">
             <li>
-                <a href="#">회사소개</a>
+                <a href="">회사소개</a>
                 <span class="material-symbols-outlined moreBtn1">expand_more</span>
                 <span class="material-symbols-outlined lessBtn1">expand_less</span>
             </li>
             <div id="subM1">
                 <ul>
                     <li>
-                        <a href="">회사소개</a>
+                        <a href="index2.html">회사소개</a>
                     </li>
                     <li>
                         <a href="">주요 서비스</a>
@@ -412,6 +411,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script>
     $(function (){
+
         let header=$("header");
         let menuBtn=$("#menu");
         let topGnb=$("#topGnb");
@@ -428,17 +428,22 @@
         let lessBtn2=$(".lessBtn2");
         let subM1=$("#subM1");
         let subM2=$("#subM2");
-        let sTxt=$("#sideTxt");
+        let sMu=$("#subMenu");
+        // let subli=$("#subMenu")
 
         /********************topGnb 활성화 및 비활성화********************/
-        subList1.hide();
+        // subList1.hide();
 
+        // sMu.css({"opacity":0.5, "background-color":"blue"});
+        sMu.hide();
         navLi.eq(0).hover(function (){
-            subList1.show();
+            // subList1.show();
+            sMu.show();
         });
-        subList1.eq(0).mouseleave(function (){
-            subList1.hide();
+        sMu.mouseleave(function (){
+            sMu.hide();
         });
+
         /********************모바일 메뉴 활성화 및 비활성화********************/
         mbMenu.hide();
         closeBtn.hide();
@@ -472,6 +477,7 @@
             moreBtn1.show();
             lessBtn1.hide();
         })
+
         /********************모바일 서브 메뉴2********************/
         lessBtn2.hide();
         subM2.hide();
