--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <ul>
                 <li><a href="#">회사소개</a></li>
                 <li><a href="#">사업영역</a></li>
-                <li><a href="#">특장점</a></li>
+                <li><a href="index3.html">특장점</a></li>
                 <li><a href="#">포트폴리오</a></li>
                 <li><a href="#">오시는 길</a></li>
                 <li><a href="#">프로젝트 의뢰</a></li>
@@ -169,7 +169,7 @@
                     </li>
                 </ul>
             </div>
-            <li><a href="#">특장점</a></li>
+            <li><a href="index3.html">특장점</a></li>
             <li><a href="#">포트폴리오</a></li>
             <li><a href="#">오시는 길</a></li>
             <li><a href="#">프로젝트 의뢰</a></li>
@@ -428,20 +428,44 @@
         let lessBtn2=$(".lessBtn2");
         let subM1=$("#subM1");
         let subM2=$("#subM2");
-        let sMu=$("#subMenu");
+        let subMenu=$("#subMenu");
+        let subMenu2=$("#subMenu2");
         // let subli=$("#subMenu")
 
         /********************topGnb 활성화 및 비활성화********************/
 
-        sMu.hide();
+        subMenu.hide();
+        subMenu2.hide();
         navLi.eq(0).hover(function (){
             // subList1.show();
-            sMu.show();
+            subMenu.show();
+            subMenu2.hide();
+        });subMenu.mouseleave(function (){
+            subMenu.hide();
         });
-        sMu.mouseleave(function (){
-            sMu.hide();
+        navLi.eq(1).hover(function (){
+            subMenu2.show();
+            subMenu.hide();
+        });subMenu2.mouseleave(function (){
+            subMenu2.hide();
         });
 
+        navLi.eq(2).hover(function (){
+            subMenu2.hide();
+            subMenu.hide();
+        })
+        navLi.eq(3).hover(function (){
+            subMenu2.hide();
+            subMenu.hide();
+        })
+        navLi.eq(4).hover(function (){
+            subMenu2.hide();
+            subMenu.hide();
+        })
+        navLi.eq(5).hover(function (){
+            subMenu2.hide();
+            subMenu.hide();
+        })
         /********************모바일 메뉴 활성화 및 비활성화********************/
         mbMenu.hide();
         closeBtn.hide();
