--- a/index3.html
+++ b/index3.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>회사소개 > 컨트롤에이, CONTROLA</title>
+    <title>방법론 > 컨트롤에이, CONTROLA : 즐거운 상상력</title>
     <link rel="icon" href="x" type="image/x-icon">
-    <link rel="stylesheet" href="css/css2.css">
+    <link rel="stylesheet" href="css/css3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
 </head>
 <body>
-<div id="wrapper">
+<div class="wrapper">
     <!--------------------------------데스크탑네비-------------------------------------->
     <header>
         <nav id="topGnb">
@@ -17,9 +18,9 @@
                 <img src="img/logo_color.png" width="166px" height="28px" alt="">
             </a>
             <ul>
-                <li><a href="">회사소개</a></li>
+                <li><a href="#">회사소개</a></li>
                 <li><a href="#">사업영역</a></li>
-                <li><a href="index3.html">특장점</a></li>
+                <li><a href="#">특장점</a></li>
                 <li><a href="#">포트폴리오</a></li>
                 <li><a href="#">오시는 길</a></li>
                 <li><a href="#">프로젝트 의뢰</a></li>
@@ -31,7 +32,7 @@
         <nav id="subMenu">
             <ul class="subList">
                 <li>
-                    <a href="index2.html">
+                    <a href="">
                         회사소개
                     </a>
                 </li>
@@ -94,7 +95,7 @@
         </nav>
         <!--------------------------------타이틀-------------------------------------->
         <div id="title">
-            <h1>Company Info</h1>
+            <h1>Method</h1>
         </div>
     </header>
     <!--------------------------------모바일네비-------------------------------------->
@@ -148,199 +149,48 @@
     </nav>
     <!--------------------------------section1-------------------------------------->
     <section id="section1">
-        <div class="textBox">
-            <div class="name">회사명</div>
-            <p>주식회사 컨트롤에이</p>
-            <div class="name">설립일</div>
-            <p>2015년 7월</p>
-        </div>
-        <div class="textBox">
-            <div class="name">종목</div>
-            <ul>
-                <li>소프트웨어 개발 및 공급</li>
-                <li>포털 및 기타인터넷정보매개업</li>
-                <li>광고대행</li>
-            </ul>
-        </div>
-        <div class="textBox">
-            <div class="name">사업분야</div>
-            <ul>
-                <li>전략컨설팅 사업</li>
-                <li>디지털광고 및 마케팅 브랜딩</li>
-                <li>디자인서비스사업</li>
-                <li>기술(솔루션)서비스사업</li>
-                <li>디지털채널 운영 및 이노베이션 사업</li>
-            </ul>
-        </div>
-        <!--------------------------------section1-mobile-------------------------------------->
-        <div id="section1_mobile">
-            <div class="section1_mobile_txtBox">
-                <div class="mobileName">회사명</div>
-                <p>주식회사 컨트롤에이</p>
+        <div id="allContentBox">
+            <div class="contentBox">
+                <div class="inside_ContentBox">
+                    <img src="img/cont_method01.png" width="100px" height="100px" alt="">
+                    <h3>Digital Branding</h3>
+                    <p>
+                        강력한 Digital Branding을 위해<br>
+                        사용자의 Experiences Satisfaction을 높임으로<br>
+                        고객의 경험과 상호작용을 바탕으로<br>
+                        인지도, 만족도, 충성도를 높이는 전략과<br>
+                        실행방안을 제시합니다.
+                    </p>
+                </div>
             </div>
-            <div class="section1_mobile_txtBox">
-                <div class="mobileName">설립일</div>
-                <p>2015년 7월</p>
+            <div class="contentBox">
+                <div class="inside_ContentBox">
+                    <img src="img/cont_method02.png" width="110px" height="90px" alt="">
+                    <h3>Strategic Planning</h3>
+                    <p>
+                        중장기적 시각으로 고객과<br>
+                        사용자의 정확한 Needs를 파악하여<br>
+                        최적의 Digital Value Strategy를 제시함으로<br>
+                        디지털채널별 포지셔닝과 더불어<br>
+                        최상의 퍼포먼스를 위한 I.M.C를 플랜을 제공합니다.
+                    </p>
+                </div>
             </div>
-            <div class="section1_mobile_txtBox">
-                <div class="mobileName">종목</div>
-                <ul>
-                    <li>소프트웨어 개발 및 공급</li>
-                    <li>포털 및 기타인터넷정보매개업</li>
-                    <li>광고대행</li>
-                </ul>
-            </div>
-            <div class="section1_mobile_txtBox">
-                <div class="mobileName">사업분야</div>
-                <ul>
-                    <li>전략컨설팅 사업</li>
-                    <li>디지털광고 및 마케팅 브랜딩</li>
-                    <li>디자인서비스사업</li>
-                    <li>기술(솔루션)서비스사업</li>
-                    <li>디지털채널 운영 및 이노베이션 사업</li>
-                </ul>
+            <div class="contentBox">
+                <div class="inside_ContentBox">
+                    <img src="img/cont_method03.png" width="100px" height="100px" alt="">
+                    <h3>Digital Creative Value</h3>
+                    <p>
+                        디지털 채널 및 사용자별로 선호하는<br>
+                        UX/UI, Design Style, Layout, Color,<br>
+                        Typography, Metaphor 등을<br>
+                        Analysis하고 사용자의 목적에 부합하는<br>
+                        최상의 가치를 제공합니다.
+                    </p>
+                </div>
             </div>
         </div>
     </section>
-    <!--------------------------------section2-------------------------------------->
-    <section id="section2">
-        <div id="purple">
-            <div>
-                <h1>3S</h1>
-                <p>information<br>Service</p>
-            </div>
-        </div>
-        <div id="navy">
-            <div>
-                <h1>5D</h1>
-                <p>Digital Agency<br>Business Domain</p>
-            </div>
-        </div>
-    </section>
-    <!--------------------------------section3-------------------------------------->
-    <section id="section3">
-        <div id="client">
-            <h1>Our Client</h1>
-            <p>고객의 성공을 위한 컨트롤에이의 노력에서 짧지만 다양한 분야의 고객사와 함께 일할 수 있는 기회를 가지게 되었습니다.</p>
-        </div>
-        <div id="clientImgBox">
-            <ul>
-                <li>
-                    <img src="img/logo_electrolus.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_busanbank.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_kyungnambank.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_nh.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_kb.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_kiwomcapital.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_sktelecom.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_cj.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_pantos.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_jejuair.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_navien.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_pharma.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_sigongtech.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_kiwoomheros.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_paxnet.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_cresoty.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_unpa.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_innosimulation.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_hansol.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_cube.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_ssocio.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_yeongsae.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_navy.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_iseoulu.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_korea.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_kobaco.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_jung.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_kcta.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_nonga.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_samsung.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_dobak.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_woori.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_famy.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_thehome.png" alt="">
-                </li>
-                <li>
-                    <img src="img/logo_astra.png" alt="">
-                </li>
-            </ul>
-        </div>
-    </section>
-    <!--------------------------------footer-------------------------------------->
-    <footer id="footer">
-        <div>
-            <img src="img/footer_logo_on.png" alt="">
-            <p>주식회사 컨트롤에이 서울 강남구 논현로149길 12, 3층 (논현동, 에이치포)</p>
-            <p>Copyright &copy; 2019 CONTROLA CO., LTD. All Rights Reserved.</p>
-        </div>
-    </footer>
 </div>
 <script>
     $(function (){
