--- a/index3.html
+++ b/index3.html
@@ -6,8 +6,10 @@
     <link rel="icon" href="x" type="image/x-icon">
     <link rel="stylesheet" href="css/css3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-
 </head>
 <body>
 <div class="wrapper">
@@ -188,6 +190,100 @@
                         최상의 가치를 제공합니다.
                     </p>
                 </div>
+            </div>
+        </div>
+    </section>
+<!------------------------------section2------------------------------>
+    <section id="section2">
+        <div id="section2_txtBox">
+            <h1>Smart CA Methodology</h1>
+            <p>7단계의 Phase와 하부 Activity 및 Task로 구성되어 안정적인 프로젝트 수행기반 마련</p>
+        </div>
+<!------------------------------section2_blueCircleBox------------------------------>
+        <div id="section2_blueCircleBox">
+            <div class="section2_blueCircle">
+                <p>1차<br>Heuristic<br>평가</p>
+            </div>
+            <div class="section2_blueCircle">
+                <p>2차<br>Heuristic<br>평가</p>
+            </div>
+            <div class="section2_blueCircle">
+                <p>3차<br>Heuristic<br>평가</p>
+            </div>
+        </div>
+        <div id="section2_purpleCircleBox">
+            <div class="section2_allPurpleCircle">
+                <div class="section2_purpleCircle">
+                    <p>Project<br>Initiation</p>
+                </div>
+                <ul>
+                    <li>·환경/요구분석</li>
+                    <li>·사용자 요구분석</li>
+                    <li>·컨텐츠 분석</li>
+                </ul>
+            </div>
+            <div class="section2_allPurpleCircle">
+                <div class="section2_purpleCircle">
+                    <p>Analysis</p>
+                </div>
+                <ul>
+                    <li>·환경/요구분석</li>
+                    <li>·사용자 요구분석</li>
+                    <li>·컨텐츠 분석</li>
+                </ul>
+            </div>
+            <div class="section2_allPurpleCircle">
+                <div class="section2_purpleCircle">
+                    <p>Plan</p>
+                </div>
+                <ul>
+                    <li>·Structure Design</li>
+                    <li>·Navigation Design</li>
+                    <li>·U.I(User Interface Design)</li>
+                </ul>
+            </div>
+            <div class="section2_allPurpleCircle">
+                <div class="section2_purpleCircle">
+                    <p>Design<br>·Dev.</p>
+                </div>
+                <ul>
+                    <li>·Concept 설정</li>
+                    <li>·Prototyping</li>
+                    <li>·Style Setup</li>
+                    <li>·Final Template 제작</li>
+                </ul>
+            </div>
+            <div class="section2_allPurpleCircle">
+                <div class="section2_purpleCircle">
+                    <p>Test</p>
+                </div>
+                <ul>
+                    <li>·디자인개발/<br>Process 정의</li>
+                    <li>·상세 디자인</li>
+                    <li>·이미지 요소 제작</li>
+                    <li>·HTML 제작</li>
+                </ul>
+            </div>
+            <div class="section2_allPurpleCircle">
+                <div class="section2_purpleCircle">
+                    <p>Realize</p>
+                </div>
+                <ul>
+                    <li>·시스템 설계</li>
+                    <li>·시스템 통합</li>
+                    <li>·시스템 구현</li>
+                </ul>
+            </div>
+            <div class="section2_allPurpleCircle">
+                <div class="section2_purpleCircle">
+                    <p>Launching</p>
+                </div>
+                <ul>
+                    <li>·Testing</li>
+                    <li>·사용자 매뉴열/<br>Style Guide제작</li>
+                    <li>·Site Launching</li>
+                    <li>·평가</li>
+                </ul>
             </div>
         </div>
     </section>
