--- a/index3.html
+++ b/index3.html
@@ -280,13 +280,25 @@
                 </div>
                 <ul>
                     <li>·Testing</li>
-                    <li>·사용자 매뉴열/<br>Style Guide제작</li>
+                    <li>·사용자 매뉴얼/<br>Style Guide제작</li>
                     <li>·Site Launching</li>
                     <li>·평가</li>
                 </ul>
             </div>
         </div>
     </section>
+<!------------------------------footer------------------------------>
+    <footer id="footer">
+        <div id="footerBox">
+            <div>
+                <img src="img/footer_logo_on.png" alt="">
+            </div>
+            <div>
+                <p>주식회사 컨트롤에이 서울 강남구 논현로149길 12, 3층 (논현동, 에이치포)</p>
+                <p>Copyright &copy; 2019 CONTROLA CO., LTD. All Rights Reserved.</p>
+            </div>
+        </div>
+    </footer>
 </div>
 <script>
     $(function (){
